# SEVETEST30

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  LICENSE  Makefile  README.md  index.html  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/: CMakeLists.txt
components/sevetest30_board/include/: AGS10.h  AHT21.h  BL5372.h  CMakeLists.txt  TCA6416A.h  api_baiduTTS.h  calibration_tools.h  fonts_chip.h  gt32l32s0140.h  hscdtd008a.h  lsm6ds3trc.h  math_tools.h  math_tools_fp64.h  sdkconfig.h  sensor_calibration.h  sevetest30_BWEDA.h  sevetest30_IWEDA.h  sevetest30_LedArray.h  sevetest30_SWEDA.h  sevetest30_UI.h  sevetest30_gpio.h  sevetest30_sound.h  sevetest30_touch.h
docs/: conf.py  index.rst
font/: 7.TXT  F.TXT  L.TXT  N.TXT  O.TXT  Q.TXT  R.TXT  X.TXT  d2.TXT  g2.TXT  j2.TXT  q2.TXT  t2.TXT  u2.TXT  x2.TXT  y2.TXT  z2.TXT
main/: AGS10.c  AHT21.c  BL5372.c  CMakeLists.txt  Kconfig.projbuild  NetEase_music_api.c  TCA6416A.c  amplifier.c  api_baiduTTS.c  board_ctrl.c  calibration_tools.c  dsp_math.c  fonts_chip.c  gt32l32s0140.c  hscdtd008a.c  idf_component.yml  lsm6ds3trc.c  main.c  math_tools.c  math_tools_fp64.c  sensor_calibration.c  sevetest30.lf  sevetest30_BWEDA.c  sevetest30_BusConf.c  sevetest30_IWEDA.c  sevetest30_LedArray.c  sevetest30_SWEDA.c  sevetest30_UI.c  sevetest30_gpio.c  sevetest30_sound.c  sevetest30_touch.c
字模/: 0.TXT  1.TXT  2.TXT  3.TXT  4.TXT  5.TXT  6.TXT  8.TXT  9.TXT  A.TXT  B.TXT  C.TXT  D.TXT  E.TXT  G.TXT  H.TXT  I.TXT  J.TXT  K.TXT  M.TXT  P.TXT  S.TXT  T.TXT  U.TXT  V.TXT  W.TXT  Y.TXT  Z.TXT  (+17 more)
(+988 files in other folders)
