idf_component_register(SRCS "api_baiduTTS.h" "fonts_chip.h" "TCA6416A.h" "sevetest30_gpio.h" 
                            "sevetest30_LedArray.h" "sdkconfig.h" "sevetest30_IWEDA.h" 
                            "sevetest30_UI.h" "sevetest30_SWEDA.h" "sevetest30_touch.h"
                             "sevetest30_BWEDA.h" "sevetest30_sound.h"
                       INCLUDE_DIRS ".")